--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
 		"express": "^4.17.2",
 		"helmet": "^4.6.0",
 		"mongoose": "^6.1.2",
-		"morgan": "^1.10.0"
+		"morgan": "^1.10.0",
+		"open-graph-scraper": "^4.11.0"
 	},
 	"devDependencies": {
 		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.13",
 		"@types/morgan": "^1.9.3",
 		"@types/node": "^17.0.0",
+		"@types/open-graph-scraper": "^4.8.1",
 		"dotenv": "^10.0.0"
 	}
 }
